--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "name": "@hiisi/viola-cli",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "exports": "./mod.ts",
   "publish": {
     "include": [
@@ -16,7 +16,9 @@
   "imports": {
     "@std/cli": "jsr:@std/cli@^1",
     "@std/path": "jsr:@std/path@^1",
-    "@hiisi/viola": "jsr:@hiisi/viola@^0.1"
+    "@std/fs": "jsr:@std/fs@^1",
+    "@hiisi/viola": "../viola/mod.ts",
+    "@hiisi/flash-freeze": "jsr:@hiisi/flash-freeze@^0.1"
   },
   "compilerOptions": {
     "strict": true,
