feat: update for plugin-based viola architecture
- Add --plugins flag for CLI override
- Pass inherit and linterConfig from config to runViola
- Update --list to load plugins and show bundles/presets
- Require plugins configuration (no built-in linters)
- Update to viola 0.1.3 with full plugin system support
- Bump version to 0.1.1

--- a/deno.json
+++ b/deno.json
@@ -16,9 +16,7 @@
   "imports": {
     "@std/cli": "jsr:@std/cli@^1",
     "@std/path": "jsr:@std/path@^1",
-    "@std/fs": "jsr:@std/fs@^1",
-    "@hiisi/viola": "../viola/mod.ts",
-    "@hiisi/flash-freeze": "jsr:@hiisi/flash-freeze@^0.1"
+    "@hiisi/viola": "jsr:@hiisi/viola@0.1.3"
   },
   "compilerOptions": {
     "strict": true,
