--- a/deno.json
+++ b/deno.json
@@ -19,7 +19,7 @@
     "@std/fs": "jsr:@std/fs@^1",
     "@std/assert": "jsr:@std/assert@^1",
     "@hiisi/flash-freeze": "jsr:@hiisi/flash-freeze@^0.1",
-    "@hiisi/viola": "../viola/mod.ts"
+    "@hiisi/viola": "jsr:@hiisi/viola@^0.1"
   },
   "compilerOptions": {
     "strict": true,
